style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    background-color: #e2a67b;
    background-image: url("fundo.svg");
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    font-family: 'Montserrat', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    position: relative;
}

@media (min-width: 768px) {
  body {
    background-size: cover;
        background-repeat: repeat;
  }
}

body::before {
    content: "";
    position: absolute;
    inset: 0;
    background-color: rgba(226, 166, 123, 0.9);
    z-index: 0;
}

body > * {
    position: relative;
    z-index: 1;
}


.container {
    text-align: center;
    width: 90%;
    max-width: 400px;
}

.foto-wrapper {
    background-color: #fff;
    padding-top: 1rem;
    position: relative;
    width: 160px;
    height: 160px;
    margin: 0 auto 3rem;
    border-radius: 50%;
    overflow: hidden;
    border: 4px solid rgba(255, 255, 255, 0.4);
    box-shadow: 0 8px 25px rgba(0, 0, 0, 0.35);
}

.logo {
    width: 100px;
}

.frase {
    width: 100%;
    padding-bottom: 1rem;
}

.links {
    display: flex;
    flex-direction: column;
    gap: 12px;
}

.links a {
    background-color: #fff;
    color: #7a4e2a;
    text-decoration: none;
    padding: 12px 0;
    border-radius: 12px;
    font-weight: 500;
    transition: all 0.3s ease;
}

.links a:hover {
    background-color: #f5e3d4;
    transform: translateY(-2px);
}

.quem-somos {
    margin-top: 20px;
}

.toggle {
    font-size: 1rem;
    font-family: 'Montserrat', sans-serif;
    width: 100%;
    background-color: #fff;
    color: #7a4e2a;
    border: none;
    border-radius: 12px;
    padding: 12px 0;
    font-weight: 500;
    cursor: pointer;
    transition: all 0.3s ease;
}

.toggle:hover {
    background-color: #f5e3d4;
    transform: translateY(-2px);
}

.content {
    max-height: 0;
    overflow: hidden;
    transition: max-height 0.4s ease;
    background-color: rgba(255, 255, 255, 0.9);
    border-radius: 12px;
    margin-top: 10px;
    padding: 0 15px;
    font-size: 1rem;
    font-family: 'Montserrat', sans-serif;
    text-align: justify;
}

.content.active {
    max-height: 250px;
    padding: 15px;
}

.content p {
    color: #7a4e2a;
    line-height: 1.4;
}

.biscoito {
    width: 6rem;
    opacity: 0.8;
    position: fixed;
    bottom: 0;
    left: 0;
}

footer {
    margin-top: 3rem;
    font-size: 0.85rem;
    opacity: 0.8;
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
}

footer a {
    color: #fff;
    text-decoration: underline;
    font-weight: 500;
}

